--- a/Gasolinera/Gasolinera.Web/Views/Shared/_Layout.cshtml
+++ b/Gasolinera/Gasolinera.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Intranet VN</title>
+    <title>@ViewBag.Title - Gasolinera</title>
 
     <meta name="robots" content="nofollow" />
 
